feat: new architecture
